# daudio

./: CLAUDE.md  Cargo.toml  README.md  bundler.toml
crates/daudio-dsp/: Cargo.toml  README.md
crates/daudio-dsp/src/: adsr.rs  biquad.rs  gain.rs  lib.rs  notes.rs  oscillator.rs  pitch.rs  processor.rs  smoother.rs
crates/daudio-preview/: Cargo.toml  README.md
crates/daudio-preview/src/: lib.rs
crates/daudio-sdk/: Cargo.toml  README.md
crates/daudio-sdk-macros/: Cargo.toml  README.md
crates/daudio-sdk-macros/src/: lib.rs
crates/daudio-sdk/src/: audio_to_midi.rs  effect.rs  lib.rs  meter.rs  params.rs  synth.rs  voice.rs
crates/daudio-ui/: Cargo.toml  README.md
crates/daudio-ui/src/: editor.rs  knob.rs  layout.rs  lib.rs  meter.rs  note_toggle.rs  param_control.rs  theme.css  theme.rs
docs/plans/: 2026-07-02-daudio-first-plugin.md  2026-07-02-daudio-meter.md  2026-07-02-daudio-pitch-followups.md  2026-07-02-daudio-pitch-to-midi-design.md  2026-07-02-daudio-pitch-to-midi.md  2026-07-02-daudio-rotary-knob.md  2026-07-02-daudio-sdk-design.md  2026-07-02-daudio-sdk-extraction.md  2026-07-02-daudio-synth.md  2026-07-02-daudio-ui.md  2026-07-03-pitch-to-midi-auto-bend-design.md  2026-07-03-pitch-to-midi-low-latency-design.md  2026-07-03-pitch-to-midi-low-latency.md  2026-07-03-pitch-to-midi-note-shaping-design.md  2026-07-03-pitch-to-midi-tracking-controls-design.md
plugins/filter/: Cargo.toml  README.md
plugins/filter/src/: core.rs  lib.rs
plugins/pitch-to-midi/: Cargo.toml  README.md
plugins/pitch-to-midi/src/: lib.rs  trigger.rs
plugins/synth/: Cargo.toml  README.md
plugins/synth/src/: lib.rs  voice.rs
xtask/: Cargo.toml
