[package]
name = "daudio-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
daudio-dsp = { path = "../daudio-dsp" }
daudio-sdk-macros = { path = "../daudio-sdk-macros" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23" }
