[package]
name = "filter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
daudio-sdk = { path = "../../crates/daudio-sdk" }
daudio-dsp = { path = "../../crates/daudio-dsp" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "f36931f7af4646065488a9845d8f8c2f95252c23", features = ["standalone"] }
